--- a/Practica7A/Ejercicio7A.html
+++ b/Practica7A/Ejercicio7A.html
@@ -2,17 +2,20 @@
 <html>
     <head>
 
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="style.css"><!--Cambiar el orden de los objetos div altera si están encima u debajo-->
     </head>
     <body>
-        <div class ="div_item3">
+        <div class ="RecRojo"> <!--Al poner los divs relativos, toma la posición de los absolutos y trabaja dentro de ellos-->
+            <div class ="RecVerde">
+            </div>
         </div>
-         <div class ="div_item4">
+       
+        <div class ="RecAzul">
+            <div class ="RecAmar">
+
+            </div>
         </div>
-        <div class ="div_item1">
-        </div>
-        <div class ="div_item2">
-        </div>
+        
 
     </body>
 
