--- a/PracticaGoogleA/GoogleAnglès.html
+++ b/PracticaGoogleA/GoogleAnglès.html
@@ -8,9 +8,9 @@
 <body>
       <nav>
       	<a href="#">Gmail</a>
-      	<a href="#">Imatges</a>
+      	<a href="#">Images</a>
       	<img src="g-menu.PNG">
-      	<button>Inicia la sessió</button>
+      	<button>Log in</button>
       </nav>
       <section class="section-1">
       	<img src="logo.png" class="logo">
@@ -21,30 +21,30 @@
       			<img src="vs.png" class="vs-icon">
                 <img src="Google_Lens_2021.png" class="vs-keyboard">
                 <img src="62829-keyboard-icon.png" class="vs-googlelens">
-      			<input type="submit" class="s-btn" value="Cerca de Google">
-      			<input type="submit" class="s-btn" value="Segur que tinc sort">
+      			<input type="submit" class="s-btn" value="Google Search">
+      			<input type="submit" class="s-btn" value="Sure I'm Lucky">
       		</div>
       	</form>
       	<div class="lang">
-      		Google disponible en:
-      		<a href="#">Català </a>
-      		<a href="GoogleCastellá.html">Castellà </a>
-            <a href="GoogleAnglès.html">Anglès </a>
+      		Google avaliable in:
+      		<a href="PracticaGoogleA.html">Catalá</a>
+      		<a href="GoogleCastellá.html">Spanish</a>
+            <a href="#">English</a>
       	</div>
       </section>
       <footer>
-      	<h4>Espanya</h4>
+      	<h4>Spain</h4>
       	<div class="links">
       		<div class="link-1">
-      			<a href="#">Informació</a>
-      			<a href="#">Publicitat</a>
-      			<a href="#">Empresa</a>
-      			<a href="#">Com funciona la Cerca</a>
+      			<a href="#">Information</a>
+      			<a href="#">Advertisingt</a>
+      			<a href="#">Company</a>
+      			<a href="#">How Search works</a>
       		</div>
       		<div class="link-2">
-      			<a href="#">Privadesa</a>
-      			<a href="#">Condicions</a>
-      			<a href="#">Configuració</a>
+      			<a href="#">Privacy</a>
+      			<a href="#">Conditions</a>
+      			<a href="#">Configuration</a>
       		</div>
       	</div>
       </footer>
