--- a/PracticaGoogleA/GoogleCastellá.html
+++ b/PracticaGoogleA/GoogleCastellá.html
@@ -8,9 +8,9 @@
 <body>
       <nav>
       	<a href="#">Gmail</a>
-      	<a href="#">Imatges</a>
+      	<a href="#">Imágenes</a>
       	<img src="g-menu.PNG">
-      	<button>Inicia la sessió</button>
+      	<button>Iniciar la sesión</button>
       </nav>
       <section class="section-1">
       	<img src="logo.png" class="logo">
@@ -21,30 +21,30 @@
       			<img src="vs.png" class="vs-icon">
                 <img src="Google_Lens_2021.png" class="vs-keyboard">
                 <img src="62829-keyboard-icon.png" class="vs-googlelens">
-      			<input type="submit" class="s-btn" value="Cerca de Google">
-      			<input type="submit" class="s-btn" value="Segur que tinc sort">
+      			<input type="submit" class="s-btn" value="Acerca de Google">
+      			<input type="submit" class="s-btn" value="Seguro que tengo suerte">
       		</div>
       	</form>
       	<div class="lang">
       		Google disponible en:
-      		<a href="#">Català </a>
-      		<a href="GoogleCastellá.html">Castellà </a>
-            <a href="GoogleAnglès.html">Anglès </a>
+      		<a href="PracticaGoogleA.html">Catalán</a>
+      		<a href="#">Castellano</a>
+            <a href="GoogleAnglès.html">Inglés</a>
       	</div>
       </section>
       <footer>
-      	<h4>Espanya</h4>
+      	<h4>España</h4>
       	<div class="links">
       		<div class="link-1">
-      			<a href="#">Informació</a>
-      			<a href="#">Publicitat</a>
+      			<a href="#">Información</a>
+      			<a href="#">Publicidad</a>
       			<a href="#">Empresa</a>
-      			<a href="#">Com funciona la Cerca</a>
+      			<a href="#">Como funciona</a>
       		</div>
       		<div class="link-2">
-      			<a href="#">Privadesa</a>
-      			<a href="#">Condicions</a>
-      			<a href="#">Configuració</a>
+      			<a href="#">Privacidad</a>
+      			<a href="#">Condiciones</a>
+      			<a href="#">Configuración</a>
       		</div>
       	</div>
       </footer>
