--- a/PracticaGoogleA/GoogleCastellano.html
+++ b/PracticaGoogleA/GoogleCastellano.html
@@ -8,9 +8,9 @@
 <body>
       <nav>
       	<a href="#">Gmail</a>
-      	<a href="#">Images</a>
+      	<a href="#">Imágenes</a>
       	<img src="g-menu.PNG">
-      	<button>Log in</button>
+      	<button>Iniciar la sesión</button>
       </nav>
       <section class="section-1">
       	<img src="logo.png" class="logo">
@@ -21,30 +21,30 @@
       			<img src="vs.png" class="vs-icon">
                 <img src="Google_Lens_2021.png" class="vs-keyboard">
                 <img src="62829-keyboard-icon.png" class="vs-googlelens">
-      			<input type="submit" class="s-btn" value="Google Search">
-      			<input type="submit" class="s-btn" value="Sure I'm Lucky">
+      			<input type="submit" class="s-btn" value="Búsqueda de Google">
+      			<input type="submit" class="s-btn" value="Seguro que tengo suerte">
       		</div>
       	</form>
       	<div class="lang">
-      		Google avaliable in:
-      		<a href="PracticaGoogleA.html">Catalá</a>
-      		<a href="GoogleCastellá.html">Spanish</a>
-            <a href="#">English</a>
+      		Google disponible en:
+      		<a href="PracticaGoogleA.html">Catalán</a>
+      		<a href="#">Castellano</a>
+            <a href="GoogleEnglish.html">Inglés</a>
       	</div>
       </section>
       <footer>
-      	<h4>Spain</h4>
+      	<h4>España</h4>
       	<div class="links">
       		<div class="link-1">
-      			<a href="#">Information</a>
-      			<a href="#">Advertisingt</a>
-      			<a href="#">Company</a>
-      			<a href="#">How Search works</a>
+      			<a href="#">Información</a>
+      			<a href="#">Publicidad</a>
+      			<a href="#">Empresa</a>
+      			<a href="#">Cómo funciona</a>
       		</div>
       		<div class="link-2">
-      			<a href="#">Privacy</a>
-      			<a href="#">Conditions</a>
-      			<a href="#">Configuration</a>
+      			<a href="#">Privacidad</a>
+      			<a href="#">Condiciones</a>
+      			<a href="#">Configuración</a>
       		</div>
       	</div>
       </footer>
