--- a/PracticaGoogleA/PracticaGoogleA.html
+++ b/PracticaGoogleA/PracticaGoogleA.html
@@ -28,8 +28,8 @@
       	<div class="lang">
       		Google disponible en:
       		<a href="#">Català </a>
-      		<a href="GoogleCastellá.html">Castellà </a>
-            <a href="GoogleAnglès.html">Anglès </a>
+      		<a href="GoogleCastellano.html">Castellà </a>
+            <a href="GoogleEnglish.html">Anglès </a>
       	</div>
       </section>
       <footer>
