--- a/PracticaGoogleA/PracticaGoogleA.html
+++ b/PracticaGoogleA/PracticaGoogleA.html
@@ -6,16 +6,16 @@
 	<link rel="stylesheet" href="index.css">
 </head>
 <body>
-      <nav>
+      <nav> <!--Parte de arriba a la derecha-->
       	<a href="#">Gmail</a>
       	<a href="#">Imatges</a>
       	<img src="g-menu.PNG">
       	<button>Inicia la sessió</button>
       </nav>
-      <section class="section-1">
+      <section class="section-1"> 
       	<img src="logo.png" class="logo">
       	<form><br><br>
-      		<div class="s-box">
+      		<div class="s-box"> <!--Zona del navegador/barra de búsqueda-->
       			<img src="search-icon-png-2.png" class="search-icon">
       			<input type="text" class="s-input">
       			<img src="vs.png" class="vs-icon">
@@ -25,14 +25,14 @@
       			<input type="submit" class="s-btn" value="Segur que tinc sort">
       		</div>
       	</form>
-      	<div class="lang">
+      	<div class="lang"> <!--Links para las páginas en diferentes idiomas-->
       		Google disponible en:
       		<a href="#">Català </a>
       		<a href="GoogleCastellano.html">Castellà </a>
             <a href="GoogleEnglish.html">Anglès </a>
       	</div>
       </section>
-      <footer>
+      <footer> <!--Pie de página-->
       	<h4>Espanya</h4>
       	<div class="links">
       		<div class="link-1">
